--- a/index.html
+++ b/index.html
@@ -1,25 +1,89 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags unless you know what you are doing -->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>AutoMom</title>
 
-      <!-- Do not add `script` tags unless you know what you are doing -->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
+  <div class="app">
+    <div class="">
+    <p class="login intro">AutoMom: Your Source of Mom Wisdom & Household Procedures</p>
+  </div>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
-    </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Do not add `link` tags unless you know what you are doing -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Do not add `script` tags unless you know what you are doing -->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body class="container-fluid">
+  <div class="container">
+
+<div class="auth">
+  <form class="login" id="sign-in">
+    <fieldset>
+      <span class="larger">Sign In:</span>
+      <label>
+        Email
+        <input type="text" name="credentials[email]">
+      </label>
+      <label>
+        Password
+        <input class="password" type="password" name="credentials[password]">
+      </label>
+      <input type="submit" name="submit" value="Sign In">
+    </fieldset>
+  </form>
+
+  <form class="login" id="sign-up">
+    <fieldset>
+      <span class="larger">Sign Up:</span>
+        <label>
+          Email
+          <input type="text" name="credentials[email]">
+        </label>
+        <label>
+          Password
+          <input class="password" type="password" name="credentials[password]">
+        </label>
+        <label>
+          Password Confirmation
+          <input class="password" type="password" name="credentials[password_confirmation]">
+        </label>
+      <input type="submit" name="submit" value="Sign Up">
+    </fieldset>
+  </form>
+
+
+
+  <form class="userstuff" id="change-password">
+    <fieldset>
+      <span class="larger">Change Password:</span>
+        <label>
+          Current Password
+          <input class="password" type="password" name="passwords[old]">
+        </label>
+        <label>
+          New Password
+          <input class="password" type="password" name="passwords[new]">
+        </label>
+      <input type="submit" name="submit" value="Change Password">
+    </fieldset>
+  </form>
+
+  <form class="userstuff" id="sign-out">
+    <fieldset>
+      <input type="submit" name="submit" value="Sign Out">
+    </fieldset>
+  </form>
+</div>
+
+<!-- see auto-mom-front-backup for additional items -->
+</div>
+</div>
+</body>
+
 </html>
