Added code that returns an array of a user's chores on clicking a "show all chores" button
"R" of "CRUD". Button returns the array, the array is visible
in the browser JS console, but does not show the chores to the user yet.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
           <input type ="submit" name="submit" value="Create chore">
         </fieldset>
       </form>
+<br><br>
+      <h2>Show all chores</h2>
+      <form id="show-chore">
+        <fieldset>
+     <input type ="submit" name="submit" value="Show all chores">
+   </fieldset>
+ </form>
 
       <BR><BR><BR><BR>
 
