Working my way towards displaying a list of chores to a user.
Also updated checklist and improved organization of /scripts.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                   </form>
 
 
+                  <h2>Change Password</h2>
             <form id="change-password">
              <fieldset>
-               <legend>Change Password</legend>
                <input type="text" name="passwords[old]" id="change-password-old" placeholder="Old Password">
                <input type="password" name="passwords[new]" id="change-password-new" placeholder="New Password">
                <input type="submit" name="submit" value="Change Password!">
@@ -76,6 +76,11 @@
      <input type ="submit" name="submit" value="Show all chores">
    </fieldset>
  </form>
+
+<!-- Using AJAX to return list of chores in the 'list' div -->
+ <div class="col-md-12" id ="list">
+
+           </div>
 
       <BR><BR><BR><BR>
 
