--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
  </form>
 
 <!-- Using AJAX to return list of chores in the 'list' div -->
- <div class="col-md-12" id ="list">
+<h4>Chore List</h4>
+ <div id="chore-list">
+<p>This is test text</p>
 
            </div>
 
