--- a/index.html
+++ b/index.html
@@ -96,7 +96,17 @@
   </form>
 
 
-
+  <h2> Update a chore</h2>
+  <form id="update-chore">
+    <fieldset>
+ <input type="text" name="chore[id]" id="id" placeholder="Chore ID"><br>
+ <input type="text" name="chore[chore_name]" id="chore_name" placeholder="Chore name"><br>
+ <textarea cols="25" rows="7" name="chore[directions]" id="directions" placeholder="Write directions here"></textarea><br>
+ <input type="text" name="chore[day_of_week]" id="day_of_week" placeholder="Day of week"><br>
+ <!-- <input type="text" name="chore[user_id]" id="user_id" placeholder="User ID"><br> -->
+ <input type ="submit" name="submit" value="Create chore">
+</fieldset>
+</form>
 
 
       <BR><BR><BR><BR>
