Bugfix for chore display
Chores were still displaying after logout ugh! But no longer, it's fixed.

Responds to and closes the following issue: https://github.com/ga-wdi-boston/full-stack-project/issues/948

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
        <h1>AutoMom</h1>
      </div>
    </div>
+   <div class ="well">
+     <div id ="usermessages">
+   </div>
+ </div>
 
    <div class="container">
    <div class="row">
@@ -82,9 +86,10 @@
 
 <!-- Using AJAX to return list of chores in the 'list' div -->
 <!-- This returns the list of chores. chore-list.handlebars targets the "chore-list" div. -->
- <div id="chore-list">
-
-           </div>
+ <div id ="chore-container">
+   <div id="chore-list">
+   </div>
+</div>
 
          </div>
        </div>
