--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
     <div class = "container">
       <div class="jumbotron">
        <h1>AutoMom</h1>
+       <div class ="well">
+         <div id ="usermessages">
+       </div>
      </div>
    </div>
-   <div class ="well">
+   <!-- <div class ="well">
      <div id ="usermessages">
-   </div>
+   </div> -->
  </div>
 
    <div class="container">
