--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ end -->
         <h2>Change Password</h2>
   <form id="change-password">
    <fieldset>
-     <input type="text" name="passwords[old]" id="change-password-old" placeholder="Old Password">
+     <input type="password" name="passwords[old]" id="change-password-old" placeholder="Old Password">
      <input type="password" name="passwords[new]" id="change-password-new" placeholder="New Password">
      <input type="submit" name="submit" value="Change Password!">
    </fieldset>
