Managing chore list display states

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
       <h2>Show all chores</h2>
         <form id="show-chore">
           <fieldset>
-          <input type ="submit" name="submit" value="Show all chores">
+          <div id="show-chore-button">
+            <input type ="submit" name="submit" value="Show all chores">
+          </div>
           </fieldset>
         </form>
         <br><br><br>
