--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        </div>
      </div>
 
-
+     <div id ="sign-out-wrapper" class="hidden">
      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
        <div class="thumbnail">
 
@@ -80,6 +80,7 @@
    </div>
    </div>
 
+<div id ="chore-crud" class ="hidden">
 <div class="container">
   <div class="row article">
   <div class="col-lg-12 col-md-12 col-sm-12col-xs-12">
@@ -112,7 +113,7 @@
        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
          <div class="thumbnail">
            <div class="caption">
-             <div class="create-chore-box"</div>
+             <div class="create-chore-box">
            <h2> Create a chore</h2>
            <form id="create-chore">
              <fieldset>
@@ -168,6 +169,7 @@
 </div>
 </div>
 </div>
+</div>
 
 
       <BR><BR><BR><BR>
@@ -188,6 +190,8 @@
  </form>
 </div>
 </div>
+</div>
+</div>
 
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <!-- <div class="thumbnail"> -->
@@ -202,10 +206,10 @@ See the code for the back end of the AutoMom app <a href ="https://github.com/li
 </div>
 
 
-          </div>
+
 
           </div>
-        </div>
+
 
 
     </body>
