Shows chore-crud forms and hides sign in/sign out upon successful login

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
    <div class="container">
    <div class="row">
      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+       <div id="sign-up-wrapper">
        <div class="thumbnail">
          <div class="caption">
            <div class="sign-up-box">
@@ -45,8 +46,10 @@
          </div>
          </div>
      </div>
+   </div>
 
      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+       <div id="sign-in-wrapper">
        <div class="thumbnail">
          <div class="caption">
            <div class="sign-in-box">
@@ -61,6 +64,7 @@
 </div>
          </div>
        </div>
+     </div>
      </div>
 
      <div id ="sign-out-wrapper" class="hidden">
