--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
    </div>
    </div>
 
-<div id ="chore-crud" class ="hidden">
+<!-- Moving the chore-crud div down so that it does not enclose the show-chore feature,
+only the create/update/delete forms -->
+<!-- <div id ="chore-crud" class ="hidden"-->
+
 <div class="container">
   <div class="row article">
   <div class="col-lg-12 col-md-12 col-sm-12col-xs-12">
@@ -111,7 +114,7 @@
        </div>
      </div>
 
-
+<div id ="chore-crud" class ="hidden">
      <div class="container">
      <div class="row">
        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
